--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,33 @@
 
 <head>
   ${head}
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9043961430295462"
-    crossorigin="anonymous"></script>
 </head>
 
 <body ${bodyAttrs}>
   ${app}
   ${scripts}
+  <script>
+    // See: https://blog.zdienos.com/2019/03/mempercepat-loading-blog-yang-terpasang-iklan-google-adsense.html
+    //<![CDATA[
+    //lazy load ads
+    let lazyloadads = false;
+    window.addEventListener("scroll", () => {
+      if ((document.documentElement.scrollTop != 0 && lazyloadads === false) || (document.body.scrollTop != 0 && lazyloadads === false)) {
+
+        (() => {
+          let ad = document.createElement('script');
+          ad.type = 'text/javascript';
+          ad.async = true;
+          ad.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+          let sc = document.getElementsByTagName('script')[0];
+          sc.parentNode.insertBefore(ad, sc);
+        })();
+
+        lazyloadads = true;
+      }
+    }, true)
+    //]]>
+  </script>
 </body>
 
 </html>
