ontouchstartの警告対応

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   ${app}
   ${scripts}
   <script>
+    document.addEventListener('touchstart', function () { }, { passive: true });
     // See: https://blog.zdienos.com/2019/03/mempercepat-loading-blog-yang-terpasang-iklan-google-adsense.html
     //<![CDATA[
     //lazy load ads
