--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   ${app}
   ${scripts}
   <script>
-    document.addEventListener('touchstart', function () { }, { passive: true });
+    if ("ontouchstart" in document.documentElement) {
+      document.addEventListener('touchstart', () => { }, { passive: true });
+    }
     // See: https://blog.zdienos.com/2019/03/mempercepat-loading-blog-yang-terpasang-iklan-google-adsense.html
     //<![CDATA[
     //lazy load ads
